fixed some leaderboard spacing

--- a/html_css_content/leaderboard.css
+++ b/html_css_content/leaderboard.css
@@ -13,5 +13,4 @@ h1 {
 .table.table-dark.table-striped {
   width: 90%;
   max-width: 1200px;
-  margin: 0 auto;
 }
